--- a/OneGuard/appsettings.json
+++ b/OneGuard/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "Otp": {
-    "BaseUrl": "http://doc01.tes.ir:8009/api/"
+    "BaseUrl": "http://37.32.29.41:8009/api/"
   }
 }
