feature : bellman connected. Endpoint verifications added.

--- a/OneGuard/appsettings.Development.json
+++ b/OneGuard/appsettings.Development.json
@@ -5,7 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Otp": {
-    "BaseUrl": "http://37.32.29.41:8009/api/"
+  "ConnectionStrings": {
+    "Default": "User ID=tesdbadmin;Password=Tes@DBPass@;Host=10.121.254.62;Port=5432;Database=one_guard;Pooling=true;"
+  },
+  "Bellman": {
+    "BaseUrl": "http://10.121.254.62:5234/api/v1/"
   }
 }
