--- a/OneGuard/appsettings.json
+++ b/OneGuard/appsettings.json
@@ -5,8 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Default": "User ID=tesdbadmin;Password=Tes@DBPass@;Host=172.17.0.4;Port=5432;Database=one_guard;Pooling=true;"
+  },
   "AllowedHosts": "*",
-  "Otp": {
-    "BaseUrl": "http://37.32.29.41:8009/api/"
+  "Bellman": {
+    "BaseUrl": "http://10.17.0.9:5234/api/v1/"
   }
 }
