--- a/OneGuard/OneGuard.csproj
+++ b/OneGuard/OneGuard.csproj
@@ -7,12 +7,21 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FastEndpoints" Version="5.15.0" />
-        <PackageReference Include="FastEndpoints.Swagger" Version="5.15.0" />
+        <PackageReference Include="FastEndpoints" Version="5.15.0"/>
+        <PackageReference Include="FastEndpoints.Swagger" Version="5.15.0"/>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.9">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.9">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Endpoints\Secrets\" />
+        <Folder Include="Endpoints\Secrets\"/>
     </ItemGroup>
 
 </Project>
