bugfix: exception handler bug fixed

--- a/OneGuard/appsettings.Development.json
+++ b/OneGuard/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,9 +7,15 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "User ID=tesdbadmin;Password=Tes@DBPass@;Host=10.121.254.62;Port=5432;Database=one_guard;Pooling=true;"
+    "Default": "User ID=tesdbadmin;Password=Tes@DBPass@;Host=10.255.255.76;Port=5432;Database=one_guard;Pooling=true;"
   },
   "Bellman": {
-    "BaseUrl": "http://10.121.254.62:5234/api/v1/"
+    "BaseUrl": "http://10.255.255.76:5234/api/v1/"
+  },
+  "ElasticApm": {
+    "ServiceName": "OneGuard",
+    "LogLevel": "Debug",
+    "ServerUrl": "http://10.255.255.76:8200",
+    "TransactionSampleRate": 1.0
   }
 }
