--- a/OneGuard/appsettings.json
+++ b/OneGuard/appsettings.json
@@ -1,15 +1,21 @@
 {
+  "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
-      "Default": "None",
-      "Microsoft.AspNetCore": "None"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "ConnectionStrings": {
-    "Default": "User ID=tesdbadmin;Password=Tes@DBPass@;Host=172.17.0.4;Port=5432;Database=one_guard;Pooling=true;"
+    "Default": "User ID=tesdbadmin;Password=Tes@DBPass@;Host=10.255.255.76;Port=5432;Database=one_guard;Pooling=true;"
   },
-  "AllowedHosts": "*",
   "Bellman": {
-    "BaseUrl": "http://172.17.0.9:5234/api/v1/"
+    "BaseUrl": "http://10.255.255.76:5234/api/v1/"
+  },
+  "ElasticApm": {
+    "ServiceName": "OneGuard",
+    "LogLevel": "Debug",
+    "ServerUrl": "http://10.255.255.76:8200",
+    "TransactionSampleRate": 1.0
   }
 }
