--- a/OneGuard/appsettings.Development.json
+++ b/OneGuard/appsettings.Development.json
@@ -10,7 +10,7 @@
     "Default": "User ID=tesdbadmin;Password=Tes@DBPass@;Host=192.168.67.17;Port=5432;Database=one_guard;Pooling=true;"
   },
   "Bellman": {
-    "BaseUrl": "http://192.168.67.17:5234/api/v1/"
+    "BaseUrl": "http://192.168.67.17:5234/api/"
   },
   "ElasticApm": {
     "ServiceName": "OneGuard",
